finish-sections-about-us-and-services

--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
                     <div class="slide-area">
                         <h1>Design is about <br/> <span>Teste</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in touch!</a>
+                        <a href="" class="button">Get in touch!</a>
                     </div>
                 </div>
             </div>
@@ -63,6 +63,53 @@
                 <div class="pointer active"></div>
                 <div class="pointer"></div>
                 <div class="pointer"></div>
+            </div>
+        </section>
+        <section class="default light">
+            <div class="section-title">
+                About us
+            </div>
+            <div class="section-desc">
+                Who we are?
+            </div>
+            <div class="section-body">
+                <div class="section-about-us">
+                    <div class="section-about-us--left">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum hic enim deserunt velit! Eum deleniti, veniam possimus magni accusantium dolor, vitae quis culpa voluptatum magnam temporibus ex esse provident quidem.</p>
+                        <a href="" class="button">Learn More</a>
+                    </div>
+                    <div class="section-about-us--right">
+                        <img src="./media/foto9.jpg" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="default dark">
+            <div class="section-title">Services</div>
+            <div class="section-desc">Services that we provide</div>
+            <div class="section-body">
+                <div class="section-services">
+                    <div class="section-service">
+                        <img src="./assets/imgs/medalha.png" />
+                        <h4>High quality design</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="./assets/imgs/estrela.png" />
+                        <h4>Modern Design</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="./assets/imgs/relogio.png" />
+                        <h4>Regular Updates</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="section-service">
+                        <img src="./assets/imgs/balao.png" />
+                        <h4>Fast and free support</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
