--- a/home.html
+++ b/home.html
@@ -245,6 +245,65 @@
                 </div>
             </div>
         </section>
+        <section class="default dark bg-team">
+            <div class="section-team-area">
+                <div class="section-title">Our team</div>
+                <div class="section-desc">Our co-workers</div>
+                <div class="section-body">
+                    <div class="section-team">
+                        <div class="sliders">
+                            <div class="slide">
+                                <div class="slide-area">
+                                    <img class="section-team--avatar" src="./media/mulher1.png" />
+                                    <div class="section-team--name">Jane Doe</div>
+                                    <div class="section-team--role">Master Mind</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="./assets/imgs/facebook.png" /></a>
+                                        <a href=""><img src="./assets/imgs/googleplus.png" /></a>
+                                        <a href=""><img src="./assets/imgs/linkedin.png" /></a>
+                                        <a href=""><img src="./assets/imgs/pinterest.png" /></a>
+                                        <a href=""><img src="./assets/imgs/twitter.png" /></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-area">
+                                    <img class="section-team--avatar" src="./media/homem1.png" />
+                                    <div class="section-team--name">Mike Chiller</div>
+                                    <div class="section-team--role">Creative Head</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="./assets/imgs/facebook.png" /></a>
+                                        <a href=""><img src="./assets/imgs/googleplus.png" /></a>
+                                        <a href=""><img src="./assets/imgs/linkedin.png" /></a>
+                                        <a href=""><img src="./assets/imgs/pinterest.png" /></a>
+                                        <a href=""><img src="./assets/imgs/twitter.png" /></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slide">
+                                <div class="slide-area">
+                                    <img class="section-team--avatar" src="./media/mulher2.png" />
+                                    <div class="section-team--name">Anna Jhons</div>
+                                    <div class="section-team--role">Technical Lead</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="./assets/imgs/facebook.png" /></a>
+                                        <a href=""><img src="./assets/imgs/googleplus.png" /></a>
+                                        <a href=""><img src="./assets/imgs/linkedin.png" /></a>
+                                        <a href=""><img src="./assets/imgs/pinterest.png" /></a>
+                                        <a href=""><img src="./assets/imgs/twitter.png" /></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
