--- a/home.html
+++ b/home.html
@@ -304,6 +304,28 @@
                 </div>
             </div>
         </section>
+        <section class="default light">
+            <div class="section-title">
+                Happy Clients
+            </div>
+            <div class="section-desc">
+                Client Reviews
+            </div>
+            <div class="section-body">
+                <div class="section-clients">
+                    <img src="./media/homem2.png" />
+                    <h1>John Doe</h1>
+                    <span>Head of PR Departament</span>
+                    <img src="./assets/imgs/quote.png" class="icone-clients" />
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe quisquam aut dolorem placeat? Deleniti autem laborum voluptas nemo vel! Ratione quos deserunt sit magni iure voluptate maxime delectus iusto libero.</p>
+                </div>
+                <div class="sliders-pointers">
+                    <div class="pointer active"></div>
+                    <div class="pointer"></div>
+                    <div class="pointer"></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
