finish-section-price

--- a/home.html
+++ b/home.html
@@ -326,6 +326,92 @@
                 </div>
             </div>
         </section>
+        <section class="section-company">
+            <div class="section-company-logos">
+                <div class="section-awards--frame">
+                    <img class="section-awards--image" src="media/empresa1.png">
+                </div>
+                <div class="section-awards--frame">
+                    <img class="section-awards--image" src="media/empresa2.png">
+                </div>
+                <div class="section-awards--frame">
+                    <img class="section-awards--image" src="media/empresa3.png">
+                </div>
+                <div class="section-awards--frame">
+                    <img class="section-awards--image" src="media/empresa4.png">
+                </div>
+                <div class="section-awards--frame">
+                    <img class="section-awards--image" src="media/empresa5.png">
+                </div>
+                <div class="section-awards--frame">
+                    <img class="section-awards--image" src="media/empresa6.png">
+                </div>
+            </div>
+        </section>
+        <section class="default light">
+            <div class="section-title">
+                Price
+            </div>
+            <div class="section-desc">
+                Pricing Table
+            </div>
+            <div class="section-body">
+                <div class="section-price">
+                    <div class="section-price-card">
+                        <h2>Express</h2>
+                        <h1>$9.99</h1>
+                        <h3>/month</h3>
+                        <div class="section-price-card-advantage">
+                            <span>Tracking Issues<br/>--</span>
+                            <span>Add bugs throught email<br/>--</span>
+                            <span>Notifications<br/>--</span>
+                            <span>Time tracking<br/>--</span>
+                            <span>Custom views</span>
+                        </div>
+                        <a href="" class="button">Choose</a>
+                    </div>
+                    <div class="section-price-card">
+                        <h2>Standart</h2>
+                        <h1>$14.99</h1>
+                        <h3>/month</h3>
+                        <div class="section-price-card-advantage">
+                            <span>Tracking Issues<br/>--</span>
+                            <span>Add bugs throught email<br/>--</span>
+                            <span>Notifications<br/>--</span>
+                            <span>Time tracking<br/>--</span>
+                            <span>Custom views</span>
+                        </div>
+                        <a href="" class="button">Choose</a>
+                    </div>
+                    <div class="section-price-card">
+                        <h2>Luxe</h2>
+                        <h1>$19.99</h1>
+                        <h3>/month</h3>
+                        <div class="section-price-card-advantage">
+                            <span>Tracking Issues<br/>--</span>
+                            <span>Add bugs throught email<br/>--</span>
+                            <span>Notifications<br/>--</span>
+                            <span>Time tracking<br/>--</span>
+                            <span>Custom views</span>
+                        </div>
+                        <a href="" class="button">Choose</a>
+                    </div>
+                    <div class="section-price-card">
+                        <h2>Premium</h2>
+                        <h1>$24.99</h1>
+                        <h3>/month</h3>
+                        <div class="section-price-card-advantage">
+                            <span>Tracking Issues<br/>--</span>
+                            <span>Add bugs throught email<br/>--</span>
+                            <span>Notifications<br/>--</span>
+                            <span>Time tracking<br/>--</span>
+                            <span>Custom views</span>
+                        </div>
+                        <a href="" class="button">Choose</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
