--- a/home.html
+++ b/home.html
@@ -412,6 +412,183 @@
                 </div>
             </div>
         </section>
+        <section class="default light premium">
+            <div class="section-title">Premium</div>
+            <div class="section-desc">Even More Features Available</div>
+            <div class="section-body">
+                <div class="section-premium">
+                    <div class="sliders" style="margin-left:0;">
+                        <div class="slide">
+                            <div class="slidearea">
+                                <div class="section-premium--left">
+                                    <img src="media/livros.png" />
+                                </div>
+                                <div class="section-premium--right">
+                                        <div class="section-premium--item">
+                                            <img src="./assets/imgs/check.png" />
+                                            <div>
+                                                <h4>FIRST FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.<br/>
+                                                -- FEATURE ONE<br/>
+                                                -- FEATURE TWO<br/>
+                                                -- FEATURE THREE
+                                            </div>
+                                        </div>
+                                        <div class="section-premium--item">
+                                            <img src="./assets/imgs/check.png" />
+                                            <div>
+                                                <h4>SECOND FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                            </div>
+                                        </div>
+                                        <div class="section-premium--item">
+                                            <img src="./assets/imgs/check.png" />
+                                            <div>
+                                                <h4>THIRD FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                ...
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                ...
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="default dark">
+            <div class="section-title">Some facts</div>
+            <div class="section-desc">About our work</div>
+            <div class="section-body">
+                <div class="section-facts">
+                    <div class="section-facts-message">
+                        <h3>1000</h3>
+                        <div class="section-facts-line"></div>
+                        <h4>Design projects released</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="section-facts-message">
+                        <h3>900</h3>
+                        <div class="section-facts-line"></div>
+                        <h4>Photos</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="section-facts-message">
+                        <h3>500</h3>
+                        <div class="section-facts-line"></div>
+                        <h4>Marketing Ideas</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                    <div class="section-facts-message">
+                        <h3>100</h3>
+                        <div class="section-facts-line"></div>
+                        <h4>Exhibitions</h4>
+                        <p>Lorem ipsum dolor sit</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-share">
+            <div class="section-share--legend">
+                <img src="./assets/imgs/share.png" />
+                Tell About Us:
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon twitter">
+                    <img src="./assets/imgs/twitter.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon linkedin">
+                    <img src="./assets/imgs/linkedin.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon facebook">
+                    <img src="./assets/imgs/facebook.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon googleplus">
+                    <img src="./assets/imgs/googleplus.png" />
+                </div>
+                152
+            </div>
+            <div class="section-share--item">
+                <div class="section-share--icon pinterest">
+                    <img src="./assets/imgs/pinterest.png" />
+                </div>
+                152
+            </div>
+        </section>
+        <section class="default light">
+            <div class="section-title">Contact Us</div>
+            <div class="section-desc">Our Agency Located in Melbourne, Australia</div>
+            <div class="section-body">
+                <div class="section-contact">
+                    <form method="POST">
+                        <div class="section-contact--split">
+                            <input type="text" name="name" placeholder="NAME" />
+                            <input type="text" name="name" placeholder="EMAIL" />
+                        </div>
+                        <input type="text" name="name" placeholder="SUBJECT" />
+                        <textarea name="message" placeholder="MESSAGE"></textarea>
+                        <input type="submit" value="Send Message" class="button" />
+                    </form>
+                </div>
+            </div>
+        </section>
+        <section class="section-map">
+            <div class="section-map-area">
+                <div class="section-map-info">
+                    <div class="section-map-info-item">
+                        <div class="section-map-info-img">
+                            <img src="./assets/imgs/carta.png" />
+                        </div>
+                        <span>endereço completo</span>
+                    </div>
+                    <div class="section-map-info-item">
+                        <div class="section-map-info-img">
+                            <img src="./assets/imgs/localizacao.png" />
+                        </div>
+                        <span>endereço completo</span>
+                    </div>
+                    <div class="section-map-info-item">
+                        <div class="section-map-info-img">
+                            <img src="./assets/imgs/telefone.png" />
+                        </div>
+                        <span>endereço completo</span>
+                    </div>
+                    <div class="section-map-info-item">
+                        <div class="section-map-info-img">
+                            <img src="./assets/imgs/arroba.png" />
+                        </div>
+                        <span>endereço completo</span>
+                    </div>
+                    <div class="section-map-info-item">
+                        <div class="section-map-info-img">
+                            <img src="./assets/imgs/web.png" />
+                        </div>
+                        <span>endereço completo</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
