--- a/home.html
+++ b/home.html
@@ -501,36 +501,36 @@
             </div>
         </section>
         <section class="section-share">
-            <div class="section-share--legend">
+            <div class="section-share-legend">
                 <img src="./assets/imgs/share.png" />
                 Tell About Us:
             </div>
-            <div class="section-share--item">
-                <div class="section-share--icon twitter">
+            <div class="section-share-item">
+                <div class="section-share-icon twitter">
                     <img src="./assets/imgs/twitter.png" />
                 </div>
                 152
             </div>
-            <div class="section-share--item">
-                <div class="section-share--icon linkedin">
+            <div class="section-share-item">
+                <div class="section-share-icon linkedin">
                     <img src="./assets/imgs/linkedin.png" />
                 </div>
                 152
             </div>
-            <div class="section-share--item">
-                <div class="section-share--icon facebook">
+            <div class="section-share-item">
+                <div class="section-share-icon facebook">
                     <img src="./assets/imgs/facebook.png" />
                 </div>
                 152
             </div>
-            <div class="section-share--item">
-                <div class="section-share--icon googleplus">
+            <div class="section-share-item">
+                <div class="section-share-icon googleplus">
                     <img src="./assets/imgs/googleplus.png" />
                 </div>
                 152
             </div>
-            <div class="section-share--item">
-                <div class="section-share--icon pinterest">
+            <div class="section-share-item">
+                <div class="section-share-icon pinterest">
                     <img src="./assets/imgs/pinterest.png" />
                 </div>
                 152
@@ -542,7 +542,7 @@
             <div class="section-body">
                 <div class="section-contact">
                     <form method="POST">
-                        <div class="section-contact--split">
+                        <div class="section-contact-input">
                             <input type="text" name="name" placeholder="NAME" />
                             <input type="text" name="name" placeholder="EMAIL" />
                         </div>
@@ -560,38 +560,57 @@
                         <div class="section-map-info-img">
                             <img src="./assets/imgs/carta.png" />
                         </div>
-                        <span>endereço completo</span>
+                        <span>endereçodeemail@email.com</span>
                     </div>
                     <div class="section-map-info-item">
                         <div class="section-map-info-img">
                             <img src="./assets/imgs/localizacao.png" />
                         </div>
-                        <span>endereço completo</span>
+                        <span>sualocalização</span>
                     </div>
                     <div class="section-map-info-item">
                         <div class="section-map-info-img">
                             <img src="./assets/imgs/telefone.png" />
                         </div>
-                        <span>endereço completo</span>
+                        <span>(12) 1234-5678</span>
                     </div>
                     <div class="section-map-info-item">
                         <div class="section-map-info-img">
                             <img src="./assets/imgs/arroba.png" />
                         </div>
-                        <span>endereço completo</span>
+                        <span>othur_batera</span>
                     </div>
                     <div class="section-map-info-item">
                         <div class="section-map-info-img">
                             <img src="./assets/imgs/web.png" />
                         </div>
-                        <span>endereço completo</span>
+                        <span>www.github.com.br</span>
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <div class="footer-area">
+            <div class="footer-item area1">
+                <div class="footer-social">
+                    <a href=""><img src="./assets/imgs/twitter.png" /></a>
+                    <a href=""><img src="./assets/imgs/linkedin.png" /></a>
+                    <a href=""><img src="./assets/imgs/facebook.png" /></a>
+                    <a href=""><img src="./assets/imgs/googleplus.png" /></a>
+                    <a href=""><img src="./assets/imgs/pinterest.png" /></a>
+                </div>
+            </div>
+            <div class="footer-item area2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam. Vestibulum porta aliquet risus, ac rhoncus sem aliquet ac. Donec tincidunt cursus elit vitae euismod.
+            </div>
+            <div class="footer-item area3">
+                <form method="POST">
+                    <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE" />
+                    <button class="button">Subscribe</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
